# silly-bevy-thing

./: Cargo.toml
docs/: crash_falling_forever.txt
src/: main.rs
